--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "",
+  "description": "Version 2 of a simple todo web application",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,14 @@
     "ejs": "^3.1.8",
     "express": "^4.16.3",
     "mongoose": "^6.5.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ad3rinto/todo_list2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ad3rinto/todo_list2/issues"
+  },
+  "homepage": "https://github.com/ad3rinto/todo_list2#readme"
 }
