--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "body-parser": "^1.18.3",
     "ejs": "^3.1.8",
     "express": "^4.16.3",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "nodemon": "^2.0.19"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ad3rinto/todo_list2.git"
