--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "Version 2 of a simple todo web application",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,17 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^3.1.8",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^6.5.4",
-    "nodemon": "^2.0.19"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ad3rinto/todo_list2.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ad3rinto/todo_list2/issues"
-  },
-  "homepage": "https://github.com/ad3rinto/todo_list2#readme"
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.4"
+  }
 }
